# Travel

./: .env  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
main/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_about_options_alter_tourlocation_options.py  0002_alter_placetolive_options_and_more.py  0002_tourlocation_content_tourlocation_image_and_more.py  0003_alter_tour_location.py  0003_alter_tour_price.py  0003_remove_tour_itinerary_remove_tour_steps_and_more.py  0004_booking.py  0005_remove_booking_num_people_booking_phone_num.py
tourism/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_guideapplication_options_alter_tour_options.py  0002_remove_customuser_is_guide_guideapplication_tour_and_more.py  0002_userprofile.py  0003_delete_tour.py  0004_guides.py  0005_alter_guides_options.py
